--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,11 +9,7 @@
                 <p class="copyright text-muted">
                     Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }}
                     <br>
-                    Inspired by <a href="http://huangxuan.me">Hux Blog</a> |
-                    <iframe style="margin-left: 2px; margin-bottom:-5px;" frameborder="0" scrolling="0" width="100px"
-                        height="20px"
-                        src="https://ghbtns.com/github-btn.html?user=huxpro&repo=huxpro.github.io&type=star&count=true">
-                    </iframe>
+                    View on GitHub <a href="https://github.com/nancycyzl/nancycyzl.github.io">Nancycy's Learning Journey</a>
                 </p>
             </div>
         </div>
