Add NSGAII note

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
                 <p class="copyright text-muted">
                     Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }}
                     <br>
-                    View on GitHub <a href="https://github.com/nancycyzl/nancycyzl.github.io">Nancycy's Learning Journey</a>
+                    View on <a href="https://github.com/nancycyzl/nancycyzl.github.io">GitHub</a>
                 </p>
             </div>
         </div>
